[gd_scene load_steps=6 format=2]

[ext_resource path="res://Resources/Temas/Tema_menu.tres" type="Theme" id=1]
[ext_resource path="res://Lobby/Lobby.gd" type="Script" id=2]
[ext_resource path="res://Lobby/lista_equipos.gd" type="Script" id=3]
[ext_resource path="res://Lobby/lista_facciones.gd" type="Script" id=4]
[ext_resource path="res://Lobby/nombre_edit.gd" type="Script" id=5]

[node name="Lobby" type="Node2D"]
script = ExtResource( 2 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 500, 500 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
margin_right = 447.0
margin_bottom = 191.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_right = 447.0
margin_bottom = 40.0

[node name="nombre_edit" type="TextEdit" parent="Panel/VBoxContainer/HBoxContainer"]
margin_right = 200.0
margin_bottom = 40.0
rect_min_size = Vector2( 200, 40 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Txt_Ip" type="TextEdit" parent="Panel/VBoxContainer/HBoxContainer"]
margin_left = 204.0
margin_right = 284.0
margin_bottom = 40.0
rect_min_size = Vector2( 80, 20 )
theme = ExtResource( 1 )
text = "127.0.0.1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_ip" type="Label" parent="Panel/VBoxContainer/HBoxContainer"]
margin_left = 288.0
margin_top = 13.0
margin_right = 350.0
margin_bottom = 27.0
text = "IP SERVER"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lista_equipos" type="OptionButton" parent="Panel/VBoxContainer/HBoxContainer"]
margin_left = 354.0
margin_right = 383.0
margin_bottom = 40.0
script = ExtResource( 3 )

[node name="lista_facciones" type="OptionButton" parent="Panel/VBoxContainer/HBoxContainer"]
margin_left = 387.0
margin_right = 416.0
margin_bottom = 40.0
script = ExtResource( 4 )

[node name="Button_Conectar" type="Button" parent="Panel/VBoxContainer"]
margin_top = 44.0
margin_right = 447.0
margin_bottom = 64.0
text = "Conectar"

[node name="titulo_jugadores_conectados" type="Label" parent="Panel/VBoxContainer"]
margin_top = 68.0
margin_right = 447.0
margin_bottom = 82.0
text = "Jugadores Conectados"
[connection signal="text_changed" from="Panel/VBoxContainer/HBoxContainer/nombre_edit" to="Panel/VBoxContainer/HBoxContainer/nombre_edit" method="_on_nombre_edit_text_changed"]
[connection signal="pressed" from="Panel/VBoxContainer/Button_Conectar" to="." method="_on_Button_Conectar_pressed"]
